--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -23,12 +23,15 @@ body{
   justify-content: space-around;
   height: 100vh;
 }
+
 .container-contact{
-  
+  width: 80%;
+  margin: 2em auto;
 }
 
 .img-perfil{
   margin-top: 1.5em;
+  text-align: center;
  
 }
 
@@ -37,6 +40,14 @@ body{
   height: 100px;
 }
 
-.img-perfil-antonioj{
- 
+.social_media{
+  display: flex;
+  flex-direction: column;
+  margin-top: 2em;
+  text-align: center;
+}
+
+li{
+  margin: 1em;
+  list-style: none;
 }
